--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,8 @@ p {
     position: relative;
     display: inline-block;
     max-width: 100%;
+    height: 40px;
+    object-fit: contain;
 }
 
 #sidebar .menu-box .sticky-menu {
@@ -451,4 +453,55 @@ p {
 }
 .free-assetes .sec-content p a{
     font-weight: 700;
+}
+
+.sub-menu ul{
+
+    list-style-type: none;
+}
+
+.sub-menu ul li{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.sub-menu ul li:hover{
+    color: #fff;
+    background: #2b70fa;
+
+}
+
+.sub-menu ul li a{
+    padding-left: 50px;
+    position: relative;
+    display: block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    font-family: Poppins;
+    font-weight: 400;
+    line-height: 20px;
+    transition: all 300ms ease 0s;
+}
+
+.sub-menu a{
+    display: flex!important;
+    justify-content: space-between;
+    align-items: center!important;
+}
+
+.sub-menu a i{
+    display: block!important;
+    position: relative!important;
+    opacity: 1!important;
+    right: 20px!important;
+}
+
+.sub-menu ul li a:hover{
+    color: #fff;
+}
+
+.command-style {
+    font-weight: 600;
 }
