Added: YouTube videos for features

--- a/css/style.css
+++ b/css/style.css
@@ -529,3 +529,18 @@ p {
     width: 100%;
     height: 100%;
 }
+
+/* Style for the "NEW" button */
+.new-button {
+    background-color: #2b70fa;
+    /* Blue color */
+    color: #fff;
+    /* White text color */
+    padding: 5px;
+    /* Adjust padding as needed */
+    border-radius: 5px;
+    /* Rounded corners */
+    margin-left: 10px;
+    /* Add some space between the title and button */
+    display: inline-block;
+}
