--- a/css/style.css
+++ b/css/style.css
@@ -544,3 +544,19 @@ p {
     /* Add some space between the title and button */
     display: inline-block;
 }
+.container-img{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+}
+.responsive-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+   
+}
