--- a/css/style.css
+++ b/css/style.css
@@ -126,14 +126,14 @@ p {
     height: 100%;
     overflow: auto;
     padding: 0px 0px 30px;
-    background: #202020;
+    background: #ffffff;
     transition: all 1000ms ease;
     -moz-transition: all 1000ms ease;
     -webkit-transition: all 1000ms ease;
     -ms-transition: all 1000ms ease;
     -o-transition: all 1000ms ease;
 
-    border-top: 4px solid #2b70fa;
+    border-top: 4px solid #22577a;
 }
 
 #sidebar .menu-box .logo {
@@ -169,7 +169,7 @@ p {
     /*padding:3px 0px;*/
     border-bottom: 1px solid rgba(255, 255, 255, 0.20);
     font-size: 20px;
-    color: #ffffff;
+    color: #000000;
     /*text-align:right;*/
 }
 
@@ -177,7 +177,7 @@ p {
     position: relative;
     display: block;
     padding: 15px 0px 15px 30px;
-    color: #ffffff;
+    color: #000000;
     font-size: 15px;
     font-family: 'Poppins';
     font-weight: 400;
@@ -196,7 +196,7 @@ p {
     top: 0px;
     width: 24px;
     text-align: right;
-    color: #ffffff;
+    color: #000000;
     opacity: 0;
     font-size: 12px;
     display: block;
@@ -220,7 +220,7 @@ p {
 #sidebar .menu-box .sticky-menu>ul>li.current>a,
 #sidebar .menu-box .sticky-menu>ul>li.current-menu-item>a {
     color: #fff;
-    background: #2b70fa;
+    background: #22577a;
 }
 
 #sidebar .copyright {
@@ -230,13 +230,13 @@ p {
     width: 250px;
     height: 30px;
     font-size: 13px;
-    color: #ffffff;
+    color: #000000;
     line-height: 30px;
     text-align: center;
 }
 
 #sidebar .copyright a {
-    color: #fff;
+    color: #22577a;
 }
 
 /***
@@ -254,6 +254,7 @@ p {
     padding: 0px 0px 30px 290px;
     width: 100%;
     z-index: 5;
+    background-color: #f2edf3;
 }
 
 #content-section .section {
@@ -266,7 +267,7 @@ p {
 #content-section .sec-title {
     position: relative;
     padding: 19px 20px 19px 30px;
-    background: #2b70fa;
+    background: #22577a;
     border-radius: 5px;
     color: #fff;
 }
@@ -311,11 +312,7 @@ p {
     display: block;
     width: 100%;
     height: 1px;
-    background: linear-gradient(left, #d0d0d0, #f1f1f1, #ffffff);
-    background: -moz-linear-gradient(left, #d0d0d0, #f1f1f1, #ffffff);
-    background: -webkit-linear-gradient(left, #d0d0d0, #f1f1f1, #ffffff);
-    background: -ms-linear-gradient(left, #d0d0d0, #f1f1f1, #ffffff);
-    background: -o-linear-gradient(left, #d0d0d0, #f1f1f1, #ffffff);
+    background: grey;
 }
 
 #content-section .sec-content {
@@ -472,7 +469,7 @@ p {
 
 .sub-menu ul li:hover {
     color: #fff;
-    background: #2b70fa;
+    background: #22577a;
 
 }
 
@@ -482,7 +479,7 @@ p {
     display: block;
     padding-top: 5px;
     padding-bottom: 5px;
-    color: rgb(255, 255, 255);
+    color: rgb(1, 1, 1);
     font-size: 15px;
     font-family: Poppins;
     font-weight: 400;
@@ -533,7 +530,7 @@ p {
 
 /* Style for the "NEW" button */
 .new-button {
-    background-color: #2b70fa;
+    background-color: #22577a;
     /* Blue color */
     color: #fff;
     /* White text color */
